Resolve merge conflicts